services/traefik/k8s/redirect-https.middleware.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: global-https
spec:
  redirectScheme:
    scheme: https
    permanent: true
