services/traefik/k8s/external-name.example.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: cluster01
spec:
  type: ExternalName
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 32000
  externalName: ${EXTERNAL_IP}
