services/traefik/k8s/traefik-dashboard.yaml
# dashboard.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`traefik.${DOMAIN_NAME}`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
    kind: Rule
    services:
      - name: api@internal
        kind: TraefikService
    middlewares:
    - name: basic-auth
  tls:
    certResolver: letsencrypt
